@@ -1,5 +1,7 @@
 In development.
 
+* Added better pkg-config and subunit support, patch #3417041 on SF.
+
 * Make tests/test_vars.in bourne shell compatible, bug #3472578 on SF.
 
 * Added ck_ prefix to mutex_lock variable, to avoid name clash on Solaris.
